# syntasa-template-audiences

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
.github/actions/setup_poetry_gcp/: action.yml
.github/workflows/: ci.yml  pytest.ini
docs/source/: conf.py  index.rst  my_function.rst
functions/my_function/: __init__.py  config.py
functions/my_function/audiences_app/: __init__.py
functions/my_function/audiences_app/audiences_agent/: agent.py  base_functions.py
functions/my_function/audiences_app/audiences_agent/prompts/: ground_truth_validation.yaml
functions/my_function/audiences_app/config/: asgi.py  settings.py  urls.py
functions/my_function/audiences_app/static/: styles.css
functions/my_function/audiences_app/ui/: views.py
functions/my_function/audiences_app/ui/templates/: index.html
functions/my_function_audiences/: main.py
functions/my_function_audiences/audiences_app/: manage.py
functions/my_function_audiences/audiences_app/audiences_agent/prompts/: generate_audiences.yaml
functions/my_function_audiences/audiences_app/static/: scripts.js
functions/my_function_audiences/audiences_app/ui/: views.py
functions/tests/: conftest.py
functions/tests/integration/: test_integration.py
functions/tests/unit/: test_my_function.py
scripts/: pdoc_to_rst.py
site/: index.html  my_function.html  search.js
