[tool.poetry]
name = "syntasa-function-template"
version = "0.0.2"
description = "Template repository for building Syntasa functions using syntasa-lib"
authors = ["Syntasa Data Platform"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "~=2.2"
pyyaml = "^6.0"
google-cloud-bigquery = "^3.40.0"
gunicorn = "^23.0.0"
google-cloud-aiplatform = "^1.71.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
mypy = "^1.11"
ruff = "^0.6"
black = "^24.8"
pytest-mock = "^3.15.1"
pdoc = "^14.5"
types-pyyaml = "^6.0.12"

[tool.ruff]
line-length = 600

[tool.ruff.lint]
ignore = ["F401", "I001"]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pdoc]
docformat = "google"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "syntasa-internal-lib"
url = "https://us-central1-python.pkg.dev/syntasa-saas/syntasa-internal-lib/simple/"
priority = "explicit"

[tool.pytest.ini_options]
pythonpath = ["functions"]
markers = [
  "integration: marks tests as integration tests"
]
